align checkboxes with items - role details - pivotal issue 74249486

--- a/app/assets/stylesheets/brandscopic.scss
+++ b/app/assets/stylesheets/brandscopic.scss
@@ -4414,6 +4414,9 @@ body.roles{
 		font-size: 16px;
 		line-height: 40px;
 		margin: 0 0 0 20px;
+		.span2{
+			margin-top: 10px;
+		}
 	}
 	.span12, .span12:first-child{
 		margin-left: 20px;
